add command for screenshots, fix bug in download script
The key 'p' now saves a screenshot in the script directory.
Fixed an issue in download script where only YOLO-tiny was downloaded
twice.

--- a/networks.ini
+++ b/networks.ini
@@ -13,7 +13,8 @@
 # The demo is using GPU by default. Remove the comment from the next line to use
 # the CPU
 
-# device = cpu
+device = cpu
+
 
 [caffenet]
 type = class
