fix missing squeezenet deploy, add Windows instructions

--- a/networks.ini
+++ b/networks.ini
@@ -13,7 +13,7 @@
 # The demo is using GPU by default. Remove the comment from the next line to use
 # the CPU
 
-device = cpu
+# device = cpu
 
 
 [caffenet]
@@ -32,7 +32,7 @@ mean = 104,117,123
 
 [squeezenet]
 type = class
-model = models/SqueezeNet/SqueezeNet_v1.1/deploy.prototxt
+model = models/squeezenet1.1_deploy.prototxt
 weights = models/SqueezeNet/SqueezeNet_v1.1/squeezenet_v1.1.caffemodel
 labels = models/imagenet_labels.txt
 mean = 104,117,123
