add tiny_yolo and tiny_yolo_voc models, add giraffe image
The YOLO tiny and tiny VOC replace the old YOLO tiny v1. Addes CoCo
labels for YOLO tiny. Added giraffe image to show detections in CoCo
models.

--- a/networks.ini
+++ b/networks.ini
@@ -43,8 +43,18 @@ model = models/googlenet_places205/deploy_places205.prototxt
 weights = models/googlenet_places205/googlelet_places205_train_iter_2400000.caffemodel
 labels = models/places205_labels.txt
 
-[yolo_tiny]
+; YOLO v2 networks
+
+[tiny_yolo]
 type = detect_yolo
-model = models/yolo/yolo_tiny_deploy.prototxt
-weights = models/yolo/yolo_tiny.caffemodel
+model = models/yolo/tiny_yolo_deploy.prototxt
+weights = models/yolo/tiny_yolo.caffemodel
+labels = models/coco_det_labels.txt
+anchors = 0.738768,0.874946, 2.42204,2.65704, 4.30971,7.04493, 10.246,4.59428, 12.6868,11.8741
+
+[tiny_yolo_voc]
+type = detect_yolo
+model = models/yolo/tiny_yolo_voc_deploy.prototxt
+weights = models/yolo/tiny_yolo_voc.caffemodel
 labels = models/pascalvoc_labels.txt
+anchors = 1.08,1.19, 3.42,4.41, 6.63,11.38, 9.42,5.11, 16.62,10.52
