add tiny and darknet presets, prototxt and weight links

--- a/networks.ini
+++ b/networks.ini
@@ -58,3 +58,15 @@ model = models/yolo/tiny_yolo_voc_deploy.prototxt
 weights = models/yolo/tiny_yolo_voc.caffemodel
 labels = models/pascalvoc_labels.txt
 anchors = 1.08,1.19, 3.42,4.41, 6.63,11.38, 9.42,5.11, 16.62,10.52
+
+[darknet]
+type = class_yolo
+model = models/yolo/darknet_deploy.prototxt
+weights = models/yolo/darknet.caffemodel
+labels = models/yolo/imagenet.shortnames
+
+[tiny_darknet]
+type = class_yolo
+model = models/yolo/tiny_deploy.prototxt
+weights = models/yolo/tiny.caffemodel
+labels = models/yolo/imagenet.shortnames
